SERVER-17652 open sockets before initializing storage engine